# iso20022-migration-service

./: .dockerignore  .gitignore  .windsurfrules  AI_CONTEXT.md  BUILD_PAIN001.xml  CONTRIBUTING.md  CORS_FIX_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  HOW_TO_TEST.md  Mapping_Patterns.md  QUICKSTART.md  QUICK_START.md  RAILWAY_DEPLOY.md  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  WEB_APP_README.md  app.py  converter.py  datetime_converter_prompt.md  datetime_converter_prompt_gradle.md  demo.sh  deploy.sh  ejike_dual_track_growth_v2.html  ejike_goals_fy2026_v4_2.md  ejike_grow_smart_outcomes.html  final_test.sh  generator_prompt.md  goals.md  improved_goals.txt  interactive_test.py  main.py  master_prompt.xml  metrics.md  prompt_sample.md  pyproject.toml  query_opt.md  requirements.txt  (+16 more)
.ai/: README.md
.ai/capabilities/: git_ops.md  (+5 more)
.beads/: issues.jsonl
.github/: CODEOWNERS
ai_context/: PROJECT_SPEC.md
api/: Procfile  converter.py  nixpacks.toml  railway.json  requirements.txt  server.py
app/: __init__.py  main.py
data/: conversion_logs.jsonl
docs/: Tobenna.docx  docusaurus.config.js  package-lock.json
samples/: MT103_FIELD_REFERENCE.md  mt103_complete_asia.txt  mt103_complete_domestic.txt  mt103_complete_intl.txt  mt103_complete_priority.txt  sample_mt101_multi.txt  sample_mt102_multi.txt  sample_mt103_asia.txt  sample_mt103_basic.txt  sample_mt103_europe.txt  sample_mt103_uk_to_us.txt  sample_mt202_cov.txt
scripts/: setup_ai_agents.sh
static/: index.html
tests/: __init__.py
web-app/: env.example  package-lock.json  package.json
(+27 files in other folders)
